--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <body>
-  <h1>My Website</h1>
+  <h1>Lily's Lavish Life</h1>
    	<p>My name is Lily Steinfeld and I am 15 years old. I have a pet dog named Lucy, a sister Lexi, a dad Larry, and a mom Lisa.</p>
  </body>
 </html>
