--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
  <body>
   <h1> <b> <u>Lily's Lavish Life</u> </b> </h1>
-   	<p>My name is Lily Steinfeld and I am 15 years old. I have a pet dog named Lucy, a sister Lexi, a dad Larry, and a mom Lisa.</p>
- </body>
-</html>
+   	<p>My name is Lily Steinfeld and I am 15 years old. </p>
+
 
