--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
  <body>
   <h1> <b> <u>Lily's Lavish Life</u> </b> </h1>
    	<p>My name is Lily Steinfeld and I am 15 years old. </p>
+ </body>
+</html>
 
 
