--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
  <body>
   <h1> <b> <u>Lily's Lavish Life</u> </b> </h1>
    	<p>My name is Lily Steinfeld and I am 15 years old. </p>
+  
+  <a href="https://theuselessweb.com/">This is the useless web.</a>
+
  </body>
 </html>
 
