--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
    	<p>My name is Lily Steinfeld and I am 15 years old. </p>
   
   <a href="https://theuselessweb.com/">This is the useless web.</a>
+  
+  <p><img src="https://freerangestock.com/sample/39591/a-romantic-couple-enjoying-the-sunset-in-a-tropical-island.jpg" alt="The Sunset" style="width:400px;height:400px;"></p>
+
 
  </body>
 </html>
