--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
- <body>
+ <body bgcolor="42a4f4">
   <h1> <b> <u>Lily's Lavish Life</u> </b> </h1>
    	<p>My name is Lily Steinfeld and I am 15 years old. </p>
   
